fix: boxes not stretching out fully

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 #main-container {
-	margin: 10px;
+	margin: 8px;
 }
 
 a {
